dresses images added

--- a/Womens_Ethenic/womens.html
+++ b/Womens_Ethenic/womens.html
@@ -896,7 +896,7 @@
     </div>
   </div>
   <div class="card">
-    <img src=".................." alt="winter wear">
+    <img src="images/Dressses/dresses.png" alt="winter wear">
     <div class="card-content">
       <h2 class="card-title">Winter Wear</h2>
       <p class="card-price">Price 1499/- Only</p>
@@ -906,7 +906,7 @@
     </div>
   </div>
   <div class="card">
-    <img src="./images/Winter52.jpg" alt="winter wear">
+    <img src="images/Dressses/drece1.png" alt="winter wear">
     <div class="card-content">
       <h2 class="card-title">Winter Wear</h2>
       <p class="card-price">Price 1499/- Only</p>
@@ -916,7 +916,7 @@
     </div>
   </div>
   <div class="card">
-    <img src="./images/Winter53.jpg" alt="winter wear">
+    <img src="images/Dressses/drece2.png" alt="winter wear">
     <div class="card-content">
       <h2 class="card-title">Winter Wear</h2>
       <p class="card-price">Price 1499/- Only</p>
@@ -926,7 +926,7 @@
     </div>
   </div>
   <div class="card">
-    <img src="./images/Winter54.jpg" alt="winter wear">
+    <img src="images/Dressses/drece3.png" alt="winter wear">
     <div class="card-content">
       <h2 class="card-title">Winter Wear</h2>
       <p class="card-price">Price 1499/- Only</p>
@@ -936,7 +936,7 @@
     </div>
   </div>
   <div class="card">
-    <img src="./images/Winter55.jpg" alt="winter wear">
+    <img src="images/Dressses/drece4.png" alt="winter wear">
     <div class="card-content">
       <h2 class="card-title">Winter Wear</h2>
       <p class="card-price">Price 1499/- Only</p>
@@ -946,7 +946,7 @@
     </div>
   </div>
   <div class="card">
-    <img src="./images/Winter56.jpg" alt="winter wear">
+    <img src="images/Dressses/drece5.png" alt="winter wear">
     <div class="card-content">
       <h2 class="card-title">Winter Wear</h2>
       <p class="card-price">Price 1499/- Only</p>
@@ -956,7 +956,7 @@
     </div>
   </div>
   <div class="card">
-    <img src="./images/Winter57.jpg" alt="winter wear">
+    <img src="images/Dressses/drece6.png" alt="winter wear">
     <div class="card-content">
       <h2 class="card-title">Winter Wear</h2>
       <p class="card-price">Price 1499/- Only</p>
@@ -966,7 +966,7 @@
     </div>
   </div>
   <div class="card">
-    <img src="./images/Winter58.jpg" alt="winter wear">
+    <img src="images/Dressses/drece7.png" alt="winter wear">
     <div class="card-content">
       <h2 class="card-title">Winter Wear</h2>
       <p class="card-price">Price 1499/- Only</p>
@@ -976,7 +976,7 @@
     </div>
   </div>
   <div class="card">
-    <img src="./images/Winter59.jpg" alt="winter wear">
+    <img src="images/" alt="winter wear">
     <div class="card-content">
       <h2 class="card-title">Winter Wear</h2>
       <p class="card-price">Price 1499/- Only</p>
