kurtis code and images added

--- a/Womens_Ethenic/womens.html
+++ b/Womens_Ethenic/womens.html
@@ -976,6 +976,76 @@
     </div>
   </div>
   <div class="card">
+    <img src="images/kurta/kurta1.png" alt="winter wear">
+    <div class="card-content">
+      <h2 class="card-title">Winter Wear</h2>
+      <p class="card-price">Price 1499/- Only</p>
+      <a href="../buy.html">
+        <button class="buy-button">Buy Now</button></a>
+      <button class="Add-to-cart">Add to cart</button>
+    </div>
+  </div>
+  <div class="card">
+    <img src="images/kurta/kurta2.png" alt="winter wear">
+    <div class="card-content">
+      <h2 class="card-title">Winter Wear</h2>
+      <p class="card-price">Price 1499/- Only</p>
+      <a href="../buy.html">
+        <button class="buy-button">Buy Now</button></a>
+      <button class="Add-to-cart">Add to cart</button>
+    </div>
+  </div>
+  <div class="card">
+    <img src="images/kurta/kurta3.png" alt="winter wear">
+    <div class="card-content">
+      <h2 class="card-title">Winter Wear</h2>
+      <p class="card-price">Price 1499/- Only</p>
+      <a href="../buy.html">
+        <button class="buy-button">Buy Now</button></a>
+      <button class="Add-to-cart">Add to cart</button>
+    </div>
+  </div>
+  <div class="card">
+    <img src="images/kurta/kurta4.png" alt="winter wear">
+    <div class="card-content">
+      <h2 class="card-title">Winter Wear</h2>
+      <p class="card-price">Price 1499/- Only</p>
+      <a href="../buy.html">
+        <button class="buy-button">Buy Now</button></a>
+      <button class="Add-to-cart">Add to cart</button>
+    </div>
+  </div>
+  <div class="card">
+    <img src="images/kurta/kurta5.png" alt="winter wear">
+    <div class="card-content">
+      <h2 class="card-title">Winter Wear</h2>
+      <p class="card-price">Price 1499/- Only</p>
+      <a href="../buy.html">
+        <button class="buy-button">Buy Now</button></a>
+      <button class="Add-to-cart">Add to cart</button>
+    </div>
+  </div>
+  <div class="card">
+    <img src="images/kurta/kurta6.png" alt="winter wear">
+    <div class="card-content">
+      <h2 class="card-title">Winter Wear</h2>
+      <p class="card-price">Price 1499/- Only</p>
+      <a href="../buy.html">
+        <button class="buy-button">Buy Now</button></a>
+      <button class="Add-to-cart">Add to cart</button>
+    </div>
+  </div>
+  <div class="card">
+    <img src="images/kurta/kurta7.png" alt="winter wear">
+    <div class="card-content">
+      <h2 class="card-title">Winter Wear</h2>
+      <p class="card-price">Price 1499/- Only</p>
+      <a href="../buy.html">
+        <button class="buy-button">Buy Now</button></a>
+      <button class="Add-to-cart">Add to cart</button>
+    </div>
+  </div>
+  <div class="card">
     <img src="images/" alt="winter wear">
     <div class="card-content">
       <h2 class="card-title">Winter Wear</h2>
