lehenga images added

--- a/Womens_Ethenic/womens.html
+++ b/Womens_Ethenic/womens.html
@@ -1046,7 +1046,7 @@
     </div>
   </div>
   <div class="card">
-    <img src="images/" alt="winter wear">
+    <img src="images/lehenga/lehenga1.png" alt="winter wear">
     <div class="card-content">
       <h2 class="card-title">Winter Wear</h2>
       <p class="card-price">Price 1499/- Only</p>
@@ -1055,6 +1055,68 @@
       <button class="Add-to-cart">Add to cart</button>
     </div>
   </div>
+  <div class="card">
+    <img src="images/lehenga/lehenga2.png" alt="winter wear">
+    <div class="card-content">
+      <h2 class="card-title">Winter Wear</h2>
+      <p class="card-price">Price 1499/- Only</p>
+      <a href="../buy.html">
+        <button class="buy-button">Buy Now</button></a>
+      <button class="Add-to-cart">Add to cart</button>
+    </div>
+  </div>
+  <div class="card">
+    <img src="images/lehenga/lehenga3.png" alt="winter wear">
+    <div class="card-content">
+      <h2 class="card-title">Winter Wear</h2>
+      <p class="card-price">Price 1499/- Only</p>
+      <a href="../buy.html">
+        <button class="buy-button">Buy Now</button></a>
+      <button class="Add-to-cart">Add to cart</button>
+    </div>
+  </div>
+  <div class="card">
+    <img src="images/lehenga/lehenga4.png" alt="winter wear">
+    <div class="card-content">
+      <h2 class="card-title">Winter Wear</h2>
+      <p class="card-price">Price 1499/- Only</p>
+      <a href="../buy.html">
+        <button class="buy-button">Buy Now</button></a>
+      <button class="Add-to-cart">Add to cart</button>
+    </div>
+  </div>
+  <div class="card">
+    <img src="images/lehenga/lehenga5.png" alt="winter wear">
+    <div class="card-content">
+      <h2 class="card-title">Winter Wear</h2>
+      <p class="card-price">Price 1499/- Only</p>
+      <a href="../buy.html">
+        <button class="buy-button">Buy Now</button></a>
+      <button class="Add-to-cart">Add to cart</button>
+    </div>
+  </div>
+  <div class="card">
+    <img src="images/lehenga/lehenga6.png" alt="winter wear">
+    <div class="card-content">
+      <h2 class="card-title">Winter Wear</h2>
+      <p class="card-price">Price 1499/- Only</p>
+      <a href="../buy.html">
+        <button class="buy-button">Buy Now</button></a>
+      <button class="Add-to-cart">Add to cart</button>
+    </div>
+  </div>
+  <div class="card">
+    <img src="images/lehenga/lehenga7.png" alt="winter wear">
+    <div class="card-content">
+      <h2 class="card-title">Winter Wear</h2>
+      <p class="card-price">Price 1499/- Only</p>
+      <a href="../buy.html">
+        <button class="buy-button">Buy Now</button></a>
+      <button class="Add-to-cart">Add to cart</button>
+    </div>
+  </div>
+  
+   
   </div>
 
   <div class="footer">
