--- a/Womens_Ethenic/womens.html
+++ b/Womens_Ethenic/womens.html
@@ -1116,6 +1116,77 @@
     </div>
   </div>
   
+  <div class="card">
+    <img src="images/saree/saree1.png" alt="winter wear">
+    <div class="card-content">
+      <h2 class="card-title">Winter Wear</h2>
+      <p class="card-price">Price 1499/- Only</p>
+      <a href="../buy.html">
+        <button class="buy-button">Buy Now</button></a>
+      <button class="Add-to-cart">Add to cart</button>
+    </div>
+  </div>
+  <div class="card">
+    <img src="images/saree/saree2.png" alt="winter wear">
+    <div class="card-content">
+      <h2 class="card-title">Winter Wear</h2>
+      <p class="card-price">Price 1499/- Only</p>
+      <a href="../buy.html">
+        <button class="buy-button">Buy Now</button></a>
+      <button class="Add-to-cart">Add to cart</button>
+    </div>
+  </div>
+  <div class="card">
+    <img src="images/saree/saree3.png" alt="winter wear">
+    <div class="card-content">
+      <h2 class="card-title">Winter Wear</h2>
+      <p class="card-price">Price 1499/- Only</p>
+      <a href="../buy.html">
+        <button class="buy-button">Buy Now</button></a>
+      <button class="Add-to-cart">Add to cart</button>
+    </div>
+  </div>
+  <div class="card">
+    <img src="images/saree/saree4.png" alt="winter wear">
+    <div class="card-content">
+      <h2 class="card-title">Winter Wear</h2>
+      <p class="card-price">Price 1499/- Only</p>
+      <a href="../buy.html">
+        <button class="buy-button">Buy Now</button></a>
+      <button class="Add-to-cart">Add to cart</button>
+    </div>
+  </div>
+  <div class="card">
+    <img src="images/saree/saree5.png" alt="winter wear">
+    <div class="card-content">
+      <h2 class="card-title">Winter Wear</h2>
+      <p class="card-price">Price 1499/- Only</p>
+      <a href="../buy.html">
+        <button class="buy-button">Buy Now</button></a>
+      <button class="Add-to-cart">Add to cart</button>
+    </div>
+  </div>
+  <div class="card">
+    <img src="images/saree/saree6.png" alt="winter wear">
+    <div class="card-content">
+      <h2 class="card-title">Winter Wear</h2>
+      <p class="card-price">Price 1499/- Only</p>
+      <a href="../buy.html">
+        <button class="buy-button">Buy Now</button></a>
+      <button class="Add-to-cart">Add to cart</button>
+    </div>
+  </div>
+  <div class="card">
+    <img src="images/saree/saree7.png" alt="winter wear">
+    <div class="card-content">
+      <h2 class="card-title">Winter Wear</h2>
+      <p class="card-price">Price 1499/- Only</p>
+      <a href="../buy.html">
+        <button class="buy-button">Buy Now</button></a>
+      <button class="Add-to-cart">Add to cart</button>
+    </div>
+  </div>
+  
    
   </div>
 
