add new changes in accessories homepage and men and women pages

--- a/accessories/boy.html
+++ b/accessories/boy.html
@@ -1,8 +1,9 @@
-<html >
+<!DOCTYPE html>
+<html lang="en">
 <head>
-    <title>Boy</title>
+    <title>boy-accessories</title>
 </head>
 <body>
-    
+     <h1>Boy Accessories</h1>
 </body>
 </html>
