--- a/accessories/girl.html
+++ b/accessories/girl.html
@@ -1,8 +1,9 @@
-<html >
+<!DOCTYPE html>
+<html lang="en">
 <head>
-    <title>girl</title>
+    <title>girl-accessories</title>
 </head>
 <body>
-    
+    <h1>Girl Accessories</h1>
 </body>
 </html>
