--- a/Womens_Ethenic/womens.html
+++ b/Womens_Ethenic/womens.html
@@ -388,7 +388,7 @@
   <div class="card">
     <img src="./images/jacket/jacket1.png" alt="winter wear">
     <div class="card-content">
-      <h2 class="card-title">Winter Wear</h2>
+      <h2 class="card-title">Jacket</h2>
       <p class="card-price">Price 1499/- Only</p>
       <a href="../buy.html">
         <button class="buy-button">Buy Now</button></a>
@@ -398,7 +398,7 @@
   <div class="card">
     <img src="./images/jacket/jacket2.png" alt="winter wear">
     <div class="card-content">
-      <h2 class="card-title">Winter Wear</h2>
+      <h2 class="card-title">Jacket</h2>
       <p class="card-price">Price 1499/- Only</p>
       <a href="../buy.html">
         <button class="buy-button">Buy Now</button></a>
@@ -408,7 +408,7 @@
   <div class="card">
     <img src="./images/jacket/jacket3.png" alt="winter wear">
     <div class="card-content">
-      <h2 class="card-title">Winter Wear</h2>
+      <h2 class="card-title">Jacket</h2>
       <p class="card-price">Price 1499/- Only</p>
       <a href="../buy.html">
         <button class="buy-button">Buy Now</button></a>
@@ -418,7 +418,7 @@
   <div class="card">
     <img src="./images/jacket/jacket4.png" alt="winter wear">
     <div class="card-content">
-      <h2 class="card-title">Winter Wear</h2>
+      <h2 class="card-title">Jacket</h2>
       <p class="card-price">Price 1499/- Only</p>
       <a href="../buy.html">
         <button class="buy-button">Buy Now</button></a>
@@ -428,7 +428,7 @@
   <div class="card">
     <img src="./images/jacket/jacket5.png" alt="winter wear">
     <div class="card-content">
-      <h2 class="card-title">Winter Wear</h2>
+      <h2 class="card-title">Jacket</h2>
       <p class="card-price">Price 1499/- Only</p>
       <a href="../buy.html">
         <button class="buy-button">Buy Now</button></a>
@@ -438,7 +438,7 @@
   <div class="card">
     <img src="./images/jacket/jacket6.png" alt="winter wear">
     <div class="card-content">
-      <h2 class="card-title">Winter Wear</h2>
+      <h2 class="card-title">Jacket</h2>
       <p class="card-price">Price 1499/- Only</p>
       <a href="../buy.html">
         <button class="buy-button">Buy Now</button></a>
@@ -448,7 +448,7 @@
   <div class="card">
     <img src="./images/jacket/jacket7.png" alt="winter wear">
     <div class="card-content">
-      <h2 class="card-title">Winter Wear</h2>
+      <h2 class="card-title">Jacket</h2>
       <p class="card-price">Price 1499/- Only</p>
       <a href="../buy.html">
         <button class="buy-button">Buy Now</button></a>
@@ -458,7 +458,7 @@
   <div class="card">
     <img src="./images/jacket/jacket8.png" alt="winter wear">
     <div class="card-content">
-      <h2 class="card-title">Winter Wear</h2>
+      <h2 class="card-title">Jacket</h2>
       <p class="card-price">Price 1499/- Only</p>
       <a href="../buy.html">
         <button class="buy-button">Buy Now</button></a>
@@ -468,7 +468,7 @@
   <div class="card">
     <img src="./images/jacket/jacket9.png" alt="winter wear">
     <div class="card-content">
-      <h2 class="card-title">Winter Wear</h2>
+      <h2 class="card-title">Jacket</h2>
       <p class="card-price">Price 1499/- Only</p>
       <a href="../buy.html">
         <button class="buy-button">Buy Now</button></a>
@@ -478,7 +478,7 @@
   <div class="card">
     <img src="./images/jacket/jacket10.png" alt="winter wear">
     <div class="card-content">
-      <h2 class="card-title">Winter Wear</h2>
+      <h2 class="card-title">Jacket</h2>
       <p class="card-price">Price 1499/- Only</p>
       <a href="../buy.html">
         <button class="buy-button">Buy Now</button></a>
@@ -488,7 +488,7 @@
   <div class="card">
     <img src="./images/jacket/jacket11.png" alt="winter wear">
     <div class="card-content">
-      <h2 class="card-title">Winter Wear</h2>
+      <h2 class="card-title">Jacket</h2>
       <p class="card-price">Price 1499/- Only</p>
       <a href="../buy.html">
         <button class="buy-button">Buy Now</button></a>
@@ -498,7 +498,7 @@
   <div class="card">
     <img src="./images/jacket/jacket12.png" alt="winter wear">
     <div class="card-content">
-      <h2 class="card-title">Winter Wear</h2>
+      <h2 class="card-title">Jacket</h2>
       <p class="card-price">Price 1499/- Only</p>
       <a href="../buy.html">
         <button class="buy-button">Buy Now</button></a>
@@ -508,7 +508,7 @@
   <div class="card">
     <img src="./images/jacket/jacket13.png" alt="winter wear">
     <div class="card-content">
-      <h2 class="card-title">Winter Wear</h2>
+      <h2 class="card-title">Jacket</h2>
       <p class="card-price">Price 1499/- Only</p>
       <a href="../buy.html">
         <button class="buy-button">Buy Now</button></a>
@@ -518,7 +518,7 @@
   <div class="card">
     <img src="./images/jacket/jacket14.png" alt="winter wear">
     <div class="card-content">
-      <h2 class="card-title">Winter Wear</h2>
+      <h2 class="card-title">Jacket</h2>
       <p class="card-price">Price 1499/- Only</p>
       <a href="../buy.html">
         <button class="buy-button">Buy Now</button></a>
@@ -528,7 +528,7 @@
   <div class="card">
     <img src="./images/jacket/jacket15.png"alt="winter wear">
     <div class="card-content">
-      <h2 class="card-title">Winter Wear</h2>
+      <h2 class="card-title">Jacket</h2>
       <p class="card-price">Price 1499/- Only</p>
       <a href="../buy.html">
         <button class="buy-button">Buy Now</button></a>
@@ -538,7 +538,7 @@
   <div class="card">
     <img src="./images/jacket/jacket16.png" alt="winter wear">
     <div class="card-content">
-      <h2 class="card-title">Winter Wear</h2>
+      <h2 class="card-title">Jacket</h2>
       <p class="card-price">Price 1499/- Only</p>
       <a href="../buy.html">
         <button class="buy-button">Buy Now</button></a>
@@ -548,7 +548,7 @@
   <div class="card">
     <img src="./images/shirts/sh1.png" alt="winter wear">
     <div class="card-content">
-      <h2 class="card-title">Winter Wear</h2>
+      <h2 class="card-title">Shirt</h2>
       <p class="card-price">Price 1499/- Only</p>
       <a href="../buy.html">
         <button class="buy-button">Buy Now</button></a>
@@ -558,7 +558,7 @@
   <div class="card">
     <img src="./images/shirts/shirt1.png" alt="winter wear">
     <div class="card-content">
-      <h2 class="card-title">Winter Wear</h2>
+      <h2 class="card-title">Shirt</h2>
       <p class="card-price">Price 1499/- Only</p>
       <a href="../buy.html">
         <button class="buy-button">Buy Now</button></a>
@@ -568,7 +568,7 @@
   <div class="card">
     <img src="./images/shirts/shirt2.png" alt="winter wear">
     <div class="card-content">
-      <h2 class="card-title">Winter Wear</h2>
+      <h2 class="card-title">Shirt</h2>
       <p class="card-price">Price 1499/- Only</p>
       <a href="../buy.html">
         <button class="buy-button">Buy Now</button></a>
@@ -578,7 +578,7 @@
   <div class="card">
     <img src="./images/shirts/shirt3.png" alt="winter wear">
     <div class="card-content">
-      <h2 class="card-title">Winter Wear</h2>
+      <h2 class="card-title">Shirt</h2>
       <p class="card-price">Price 1499/- Only</p>
       <a href="../buy.html">
         <button class="buy-button">Buy Now</button></a>
@@ -588,7 +588,7 @@
   <div class="card">
     <img src="./images/shirts/shirt4.png" alt="winter wear">
     <div class="card-content">
-      <h2 class="card-title">Winter Wear</h2>
+      <h2 class="card-title">Shirt</h2>
       <p class="card-price">Price 1499/- Only</p>
       <a href="../buy.html">
         <button class="buy-button">Buy Now</button></a>
@@ -598,7 +598,7 @@
   <div class="card">
     <img src="./images/shirts/shirt5.png" alt="winter wear">
     <div class="card-content">
-      <h2 class="card-title">Winter Wear</h2>
+      <h2 class="card-title">Shirt</h2>
       <p class="card-price">Price 1499/- Only</p>
       <a href="../buy.html">
         <button class="buy-button">Buy Now</button></a>
@@ -608,7 +608,7 @@
   <div class="card">
     <img src="./images/shirts/shirt6.png" alt="winter wear">
     <div class="card-content">
-      <h2 class="card-title">Winter Wear</h2>
+      <h2 class="card-title">Shirt</h2>
       <p class="card-price">Price 1499/- Only</p>
       <a href="../buy.html">
         <button class="buy-button">Buy Now</button></a>
@@ -618,7 +618,7 @@
   <div class="card">
     <img src="./images/shirts/shirt7.png" alt="winter wear">
     <div class="card-content">
-      <h2 class="card-title">Winter Wear</h2>
+      <h2 class="card-title">Shirt</h2>
       <p class="card-price">Price 1499/- Only</p>
       <a href="../buy.html">
         <button class="buy-button">Buy Now</button></a>
@@ -628,7 +628,7 @@
   <div class="card">
     <img src="./images/shirts/shirt8.png" alt="winter wear">
     <div class="card-content">
-      <h2 class="card-title">Winter Wear</h2>
+      <h2 class="card-title">Shirt</h2>
       <p class="card-price">Price 1499/- Only</p>
       <a href="../buy.html">
         <button class="buy-button">Buy Now</button></a>
@@ -638,7 +638,7 @@
   <div class="card">
     <img src="./images/shirts/shirt9.png" alt="winter wear">
     <div class="card-content">
-      <h2 class="card-title">Winter Wear</h2>
+      <h2 class="card-title">Shirt</h2>
       <p class="card-price">Price 1499/- Only</p>
       <a href="../buy.html">
         <button class="buy-button">Buy Now</button></a>
@@ -648,7 +648,7 @@
   <div class="card">
     <img src="./images/shirts/shirt10.png" alt="winter wear">
     <div class="card-content">
-      <h2 class="card-title">Winter Wear</h2>
+      <h2 class="card-title">Shirt</h2>
       <p class="card-price">Price 1499/- Only</p>
       <a href="../buy.html">
         <button class="buy-button">Buy Now</button></a>
@@ -658,7 +658,7 @@
   <div class="card">
     <img src="./images/shirts/shirt11.png" alt="winter wear">
     <div class="card-content">
-      <h2 class="card-title">Winter Wear</h2>
+      <h2 class="card-title">Shirt</h2>
       <p class="card-price">Price 1499/- Only</p>
       <a href="../buy.html">
         <button class="buy-button">Buy Now</button></a>
@@ -668,7 +668,7 @@
   <div class="card">
     <img src="./images/shirts/shirt12.png" alt="winter wear">
     <div class="card-content">
-      <h2 class="card-title">Winter Wear</h2>
+      <h2 class="card-title">Shirt</h2>
       <p class="card-price">Price 1499/- Only</p>
       <a href="../buy.html">
         <button class="buy-button">Buy Now</button></a>
@@ -678,7 +678,7 @@
   <div class="card">
     <img src="./images/tshirt/T.png" alt="winter wear">
     <div class="card-content">
-      <h2 class="card-title">Winter Wear</h2>
+      <h2 class="card-title">T-Shirt</h2>
       <p class="card-price">Price 1499/- Only</p>
       <a href="../buy.html">
         <button class="buy-button">Buy Now</button></a>
@@ -688,7 +688,7 @@
   <div class="card">
     <img src="./images/tshirt/tshirt1.png" alt="winter wear">
     <div class="card-content">
-      <h2 class="card-title">Winter Wear</h2>
+      <h2 class="card-title">T-Shirt</h2>
       <p class="card-price">Price 1499/- Only</p>
       <a href="../buy.html">
         <button class="buy-button">Buy Now</button></a>
@@ -698,7 +698,7 @@
   <div class="card">
     <img src="./images/tshirt/tshirt2.png" alt="winter wear">
     <div class="card-content">
-      <h2 class="card-title">Winter Wear</h2>
+      <h2 class="card-title">T-Shirt</h2>
       <p class="card-price">Price 1499/- Only</p>
       <a href="../buy.html">
         <button class="buy-button">Buy Now</button></a>
@@ -708,7 +708,7 @@
   <div class="card">
     <img src="./images/tshirt/tshirt3.png" alt="winter wear">
     <div class="card-content">
-      <h2 class="card-title">Winter Wear</h2>
+      <h2 class="card-title">T-Shirt</h2>
       <p class="card-price">Price 1499/- Only</p>
       <a href="../buy.html">
         <button class="buy-button">Buy Now</button></a>
@@ -718,7 +718,7 @@
   <div class="card">
     <img src="./images/tshirt/tshirt4.png" alt="winter wear">
     <div class="card-content">
-      <h2 class="card-title">Winter Wear</h2>
+      <h2 class="card-title">T-Shirt</h2>
       <p class="card-price">Price 1499/- Only</p>
       <a href="../buy.html">
         <button class="buy-button">Buy Now</button></a>
@@ -728,7 +728,7 @@
   <div class="card">
     <img src="./images/tshirt/tshirt5.png" alt="winter wear">
     <div class="card-content">
-      <h2 class="card-title">Winter Wear</h2>
+      <h2 class="card-title">T-Shirt</h2>
       <p class="card-price">Price 1499/- Only</p>
       <a href="../buy.html">
         <button class="buy-button">Buy Now</button></a>
@@ -738,7 +738,7 @@
   <div class="card">
     <img src="./images/tshirt/tshirt6.png" alt="winter wear">
     <div class="card-content">
-      <h2 class="card-title">Winter Wear</h2>
+      <h2 class="card-title">T-Shirt</h2>
       <p class="card-price">Price 1499/- Only</p>
       <a href="../buy.html">
         <button class="buy-button">Buy Now</button></a>
@@ -748,7 +748,7 @@
   <div class="card">
     <img src="./images/tshirt/tshirt7.png" alt="winter wear">
     <div class="card-content">
-      <h2 class="card-title">Winter Wear</h2>
+      <h2 class="card-title">T-Shirt</h2>
       <p class="card-price">Price 1499/- Only</p>
       <a href="../buy.html">
         <button class="buy-button">Buy Now</button></a>
@@ -758,7 +758,7 @@
   <div class="card">
     <img src="./images/tshirt/tshirt8.png" alt="winter wear">
     <div class="card-content">
-      <h2 class="card-title">Winter Wear</h2>
+      <h2 class="card-title">T-Shirt</h2>
       <p class="card-price">Price 1499/- Only</p>
       <a href="../buy.html">
         <button class="buy-button">Buy Now</button></a>
@@ -768,7 +768,7 @@
   <div class="card">
     <img src="./images/tshirt/tshirt9.png" alt="winter wear">
     <div class="card-content">
-      <h2 class="card-title">Winter Wear</h2>
+      <h2 class="card-title">T-Shirt</h2>
       <p class="card-price">Price 1499/- Only</p>
       <a href="../buy.html">
         <button class="buy-button">Buy Now</button></a>
@@ -778,7 +778,7 @@
   <div class="card">
     <img src="./images/tops/t.png" alt="winter wear">
     <div class="card-content">
-      <h2 class="card-title">Winter Wear</h2>
+      <h2 class="card-title">Top</h2>
       <p class="card-price">Price 1499/- Only</p>
       <a href="../buy.html">
         <button class="buy-button">Buy Now</button></a>
@@ -788,7 +788,7 @@
   <div class="card">
     <img src="./images/tops/to5.png" alt="winter wear">
     <div class="card-content">
-      <h2 class="card-title">Winter Wear</h2>
+      <h2 class="card-title">Top</h2>
       <p class="card-price">Price 1499/- Only</p>
       <a href="../buy.html">
         <button class="buy-button">Buy Now</button></a>
@@ -798,7 +798,7 @@
   <div class="card">
     <img src="./images/tops/top1.png" alt="winter wear">
     <div class="card-content">
-      <h2 class="card-title">Winter Wear</h2>
+      <h2 class="card-title">Top</h2>
       <p class="card-price">Price 1499/- Only</p>
       <a href="../buy.html">
         <button class="buy-button">Buy Now</button></a>
@@ -808,7 +808,7 @@
   <div class="card">
     <img src="./images/tops/top2.png" alt="winter wear">
     <div class="card-content">
-      <h2 class="card-title">Winter Wear</h2>
+      <h2 class="card-title">Top</h2>
       <p class="card-price">Price 1499/- Only</p>
       <a href="../buy.html">
         <button class="buy-button">Buy Now</button></a>
@@ -818,7 +818,7 @@
   <div class="card">
     <img src="./images/tops/top3.png" alt="winter wear">
     <div class="card-content">
-      <h2 class="card-title">Winter Wear</h2>
+      <h2 class="card-title">Top</h2>
       <p class="card-price">Price 1499/- Only</p>
       <a href="../buy.html">
         <button class="buy-button">Buy Now</button></a>
@@ -828,7 +828,7 @@
   <div class="card">
     <img src="./images/tops/top4.png" alt="winter wear">
     <div class="card-content">
-      <h2 class="card-title">Winter Wear</h2>
+      <h2 class="card-title">Top</h2>
       <p class="card-price">Price 1499/- Only</p>
       <a href="../buy.html">
         <button class="buy-button">Buy Now</button></a>
@@ -838,7 +838,7 @@
   <div class="card">
     <img src="./images/tops/top5.png" alt="winter wear">
     <div class="card-content">
-      <h2 class="card-title">Winter Wear</h2>
+      <h2 class="card-title">Top</h2>
       <p class="card-price">Price 1499/- Only</p>
       <a href="../buy.html">
         <button class="buy-button">Buy Now</button></a>
@@ -848,7 +848,7 @@
   <div class="card">
     <img src="./images/tops/top6.png" alt="winter wear">
     <div class="card-content">
-      <h2 class="card-title">Winter Wear</h2>
+      <h2 class="card-title">Top</h2>
       <p class="card-price">Price 1499/- Only</p>
       <a href="../buy.html">
         <button class="buy-button">Buy Now</button></a>
@@ -858,7 +858,7 @@
   <div class="card">
     <img src="./images/tops/top7.png" alt="winter wear">
     <div class="card-content">
-      <h2 class="card-title">Winter Wear</h2>
+      <h2 class="card-title">Top</h2>
       <p class="card-price">Price 1499/- Only</p>
       <a href="../buy.html">
         <button class="buy-button">Buy Now</button></a>
@@ -868,7 +868,7 @@
   <div class="card">
     <img src="./images/tops/top8.png" alt="winter wear">
     <div class="card-content">
-      <h2 class="card-title">Winter Wear</h2>
+      <h2 class="card-title">Top</h2>
       <p class="card-price">Price 1499/- Only</p>
       <a href="../buy.html">
         <button class="buy-button">Buy Now</button></a>
@@ -878,7 +878,7 @@
   <div class="card">
     <img src="./images/tops/top9.png" alt="winter wear">
     <div class="card-content">
-      <h2 class="card-title">Winter Wear</h2>
+      <h2 class="card-title">Top</h2>
       <p class="card-price">Price 1499/- Only</p>
       <a href="../buy.html">
         <button class="buy-button">Buy Now</button></a>
@@ -888,7 +888,7 @@
   <div class="card">
     <img src="./images/tops/top10.png" alt="winter wear">
     <div class="card-content">
-      <h2 class="card-title">Winter Wear</h2>
+      <h2 class="card-title">Top</h2>
       <p class="card-price">Price 1499/- Only</p>
       <a href="../buy.html">
         <button class="buy-button">Buy Now</button></a>
@@ -898,7 +898,7 @@
   <div class="card">
     <img src="images/Dressses/dresses.png" alt="winter wear">
     <div class="card-content">
-      <h2 class="card-title">Winter Wear</h2>
+      <h2 class="card-title">Dress</h2>
       <p class="card-price">Price 1499/- Only</p>
       <a href="../buy.html">
         <button class="buy-button">Buy Now</button></a>
