--- a/Womens_Ethenic/womens.html
+++ b/Womens_Ethenic/womens.html
@@ -908,7 +908,7 @@
   <div class="card">
     <img src="images/Dressses/drece1.png" alt="winter wear">
     <div class="card-content">
-      <h2 class="card-title">Winter Wear</h2>
+      <h2 class="card-title">Dress</h2>
       <p class="card-price">Price 1499/- Only</p>
       <a href="../buy.html">
         <button class="buy-button">Buy Now</button></a>
@@ -918,7 +918,7 @@
   <div class="card">
     <img src="images/Dressses/drece2.png" alt="winter wear">
     <div class="card-content">
-      <h2 class="card-title">Winter Wear</h2>
+      <h2 class="card-title">Dress</h2>
       <p class="card-price">Price 1499/- Only</p>
       <a href="../buy.html">
         <button class="buy-button">Buy Now</button></a>
@@ -928,7 +928,7 @@
   <div class="card">
     <img src="images/Dressses/drece3.png" alt="winter wear">
     <div class="card-content">
-      <h2 class="card-title">Winter Wear</h2>
+      <h2 class="card-title">Dress</h2>
       <p class="card-price">Price 1499/- Only</p>
       <a href="../buy.html">
         <button class="buy-button">Buy Now</button></a>
@@ -938,7 +938,7 @@
   <div class="card">
     <img src="images/Dressses/drece4.png" alt="winter wear">
     <div class="card-content">
-      <h2 class="card-title">Winter Wear</h2>
+      <h2 class="card-title">Dress</h2>
       <p class="card-price">Price 1499/- Only</p>
       <a href="../buy.html">
         <button class="buy-button">Buy Now</button></a>
@@ -948,7 +948,7 @@
   <div class="card">
     <img src="images/Dressses/drece5.png" alt="winter wear">
     <div class="card-content">
-      <h2 class="card-title">Winter Wear</h2>
+      <h2 class="card-title">Dress</h2>
       <p class="card-price">Price 1499/- Only</p>
       <a href="../buy.html">
         <button class="buy-button">Buy Now</button></a>
@@ -958,7 +958,7 @@
   <div class="card">
     <img src="images/Dressses/drece6.png" alt="winter wear">
     <div class="card-content">
-      <h2 class="card-title">Winter Wear</h2>
+      <h2 class="card-title">Dress</h2>
       <p class="card-price">Price 1499/- Only</p>
       <a href="../buy.html">
         <button class="buy-button">Buy Now</button></a>
@@ -968,7 +968,7 @@
   <div class="card">
     <img src="images/Dressses/drece7.png" alt="winter wear">
     <div class="card-content">
-      <h2 class="card-title">Winter Wear</h2>
+      <h2 class="card-title">Dress</h2>
       <p class="card-price">Price 1499/- Only</p>
       <a href="../buy.html">
         <button class="buy-button">Buy Now</button></a>
@@ -978,7 +978,7 @@
   <div class="card">
     <img src="images/kurta/kurta1.png" alt="winter wear">
     <div class="card-content">
-      <h2 class="card-title">Winter Wear</h2>
+      <h2 class="card-title">Kurti</h2>
       <p class="card-price">Price 1499/- Only</p>
       <a href="../buy.html">
         <button class="buy-button">Buy Now</button></a>
@@ -988,7 +988,7 @@
   <div class="card">
     <img src="images/kurta/kurta2.png" alt="winter wear">
     <div class="card-content">
-      <h2 class="card-title">Winter Wear</h2>
+      <h2 class="card-title">Kurti</h2>
       <p class="card-price">Price 1499/- Only</p>
       <a href="../buy.html">
         <button class="buy-button">Buy Now</button></a>
@@ -998,7 +998,7 @@
   <div class="card">
     <img src="images/kurta/kurta3.png" alt="winter wear">
     <div class="card-content">
-      <h2 class="card-title">Winter Wear</h2>
+      <h2 class="card-title">Kurti</h2>
       <p class="card-price">Price 1499/- Only</p>
       <a href="../buy.html">
         <button class="buy-button">Buy Now</button></a>
@@ -1008,7 +1008,7 @@
   <div class="card">
     <img src="images/kurta/kurta4.png" alt="winter wear">
     <div class="card-content">
-      <h2 class="card-title">Winter Wear</h2>
+      <h2 class="card-title">Kurti</h2>
       <p class="card-price">Price 1499/- Only</p>
       <a href="../buy.html">
         <button class="buy-button">Buy Now</button></a>
@@ -1018,7 +1018,7 @@
   <div class="card">
     <img src="images/kurta/kurta5.png" alt="winter wear">
     <div class="card-content">
-      <h2 class="card-title">Winter Wear</h2>
+      <h2 class="card-title">Kurti</h2>
       <p class="card-price">Price 1499/- Only</p>
       <a href="../buy.html">
         <button class="buy-button">Buy Now</button></a>
@@ -1028,7 +1028,7 @@
   <div class="card">
     <img src="images/kurta/kurta6.png" alt="winter wear">
     <div class="card-content">
-      <h2 class="card-title">Winter Wear</h2>
+      <h2 class="card-title">Kurti</h2>
       <p class="card-price">Price 1499/- Only</p>
       <a href="../buy.html">
         <button class="buy-button">Buy Now</button></a>
@@ -1038,7 +1038,7 @@
   <div class="card">
     <img src="images/kurta/kurta7.png" alt="winter wear">
     <div class="card-content">
-      <h2 class="card-title">Winter Wear</h2>
+      <h2 class="card-title">Kurti</h2>
       <p class="card-price">Price 1499/- Only</p>
       <a href="../buy.html">
         <button class="buy-button">Buy Now</button></a>
@@ -1048,7 +1048,7 @@
   <div class="card">
     <img src="images/lehenga/lehenga1.png" alt="winter wear">
     <div class="card-content">
-      <h2 class="card-title">Winter Wear</h2>
+      <h2 class="card-title">Lehenga</h2>
       <p class="card-price">Price 1499/- Only</p>
       <a href="../buy.html">
         <button class="buy-button">Buy Now</button></a>
@@ -1058,7 +1058,7 @@
   <div class="card">
     <img src="images/lehenga/lehenga2.png" alt="winter wear">
     <div class="card-content">
-      <h2 class="card-title">Winter Wear</h2>
+      <h2 class="card-title">Lehenga</h2>
       <p class="card-price">Price 1499/- Only</p>
       <a href="../buy.html">
         <button class="buy-button">Buy Now</button></a>
@@ -1068,7 +1068,7 @@
   <div class="card">
     <img src="images/lehenga/lehenga3.png" alt="winter wear">
     <div class="card-content">
-      <h2 class="card-title">Winter Wear</h2>
+      <h2 class="card-title">Lehenga</h2>
       <p class="card-price">Price 1499/- Only</p>
       <a href="../buy.html">
         <button class="buy-button">Buy Now</button></a>
@@ -1078,7 +1078,7 @@
   <div class="card">
     <img src="images/lehenga/lehenga4.png" alt="winter wear">
     <div class="card-content">
-      <h2 class="card-title">Winter Wear</h2>
+      <h2 class="card-title">Lehenga</h2>
       <p class="card-price">Price 1499/- Only</p>
       <a href="../buy.html">
         <button class="buy-button">Buy Now</button></a>
@@ -1088,7 +1088,7 @@
   <div class="card">
     <img src="images/lehenga/lehenga5.png" alt="winter wear">
     <div class="card-content">
-      <h2 class="card-title">Winter Wear</h2>
+      <h2 class="card-title">Lehenga</h2>
       <p class="card-price">Price 1499/- Only</p>
       <a href="../buy.html">
         <button class="buy-button">Buy Now</button></a>
@@ -1098,7 +1098,7 @@
   <div class="card">
     <img src="images/lehenga/lehenga6.png" alt="winter wear">
     <div class="card-content">
-      <h2 class="card-title">Winter Wear</h2>
+      <h2 class="card-title">Lehenga</h2>
       <p class="card-price">Price 1499/- Only</p>
       <a href="../buy.html">
         <button class="buy-button">Buy Now</button></a>
@@ -1108,7 +1108,7 @@
   <div class="card">
     <img src="images/lehenga/lehenga7.png" alt="winter wear">
     <div class="card-content">
-      <h2 class="card-title">Winter Wear</h2>
+      <h2 class="card-title">Lehenga</h2>
       <p class="card-price">Price 1499/- Only</p>
       <a href="../buy.html">
         <button class="buy-button">Buy Now</button></a>
@@ -1119,7 +1119,7 @@
   <div class="card">
     <img src="images/saree/saree1.png" alt="winter wear">
     <div class="card-content">
-      <h2 class="card-title">Winter Wear</h2>
+      <h2 class="card-title">Saree</h2>
       <p class="card-price">Price 1499/- Only</p>
       <a href="../buy.html">
         <button class="buy-button">Buy Now</button></a>
@@ -1129,7 +1129,7 @@
   <div class="card">
     <img src="images/saree/saree2.png" alt="winter wear">
     <div class="card-content">
-      <h2 class="card-title">Winter Wear</h2>
+      <h2 class="card-title">Saree</h2>
       <p class="card-price">Price 1499/- Only</p>
       <a href="../buy.html">
         <button class="buy-button">Buy Now</button></a>
@@ -1139,7 +1139,7 @@
   <div class="card">
     <img src="images/saree/saree3.png" alt="winter wear">
     <div class="card-content">
-      <h2 class="card-title">Winter Wear</h2>
+      <h2 class="card-title">Saree</h2>
       <p class="card-price">Price 1499/- Only</p>
       <a href="../buy.html">
         <button class="buy-button">Buy Now</button></a>
@@ -1149,7 +1149,7 @@
   <div class="card">
     <img src="images/saree/saree4.png" alt="winter wear">
     <div class="card-content">
-      <h2 class="card-title">Winter Wear</h2>
+      <h2 class="card-title">Saree</h2>
       <p class="card-price">Price 1499/- Only</p>
       <a href="../buy.html">
         <button class="buy-button">Buy Now</button></a>
@@ -1159,7 +1159,7 @@
   <div class="card">
     <img src="images/saree/saree5.png" alt="winter wear">
     <div class="card-content">
-      <h2 class="card-title">Winter Wear</h2>
+      <h2 class="card-title">Saree</h2>
       <p class="card-price">Price 1499/- Only</p>
       <a href="../buy.html">
         <button class="buy-button">Buy Now</button></a>
@@ -1169,7 +1169,7 @@
   <div class="card">
     <img src="images/saree/saree6.png" alt="winter wear">
     <div class="card-content">
-      <h2 class="card-title">Winter Wear</h2>
+      <h2 class="card-title">Saree</h2>
       <p class="card-price">Price 1499/- Only</p>
       <a href="../buy.html">
         <button class="buy-button">Buy Now</button></a>
@@ -1179,7 +1179,7 @@
   <div class="card">
     <img src="images/saree/saree7.png" alt="winter wear">
     <div class="card-content">
-      <h2 class="card-title">Winter Wear</h2>
+      <h2 class="card-title">Saree</h2>
       <p class="card-price">Price 1499/- Only</p>
       <a href="../buy.html">
         <button class="buy-button">Buy Now</button></a>
