--- a/Womens_Ethenic/womens.html
+++ b/Womens_Ethenic/womens.html
@@ -94,7 +94,7 @@
     }
 
     header {
-      margin: 10px;
+      margin: 50px;
       background-color: #67afce;
       font-family: Georgia, 'Times New Roman', Times, serif;
       text-align: center;
@@ -379,7 +379,7 @@
 
 
 <header>
-  <h1>WINTER WEAR</h1>
+  <h1>Womens Ethenic Wear</h1>
 </header>
 
 <div class="container">
