added women file

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         </div>
 
         <div class="categories">
-            <a href="./ethenic_files/ethenic.html" class="categories-1">
+            <a href="./Womens_Ethenic/womens.html" class="categories-1">
                 <img src="./images/women ethenic.jpg" class="categories-card" />
                 <h class="categories-card-title"><b>Women Ethenic</b></h>
             </a>
