changes by aditya color etc

--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
     <!--categories add-->
     <div class="categories-container">
         <div class="categories">
-            <a href="./categories pages/mens.html" class="categories-1">
-                <img src="./images/menswere.jpg" class="categories-card" />
-                <h class="categories-card-title"><b>Men's wear</b></h>
+            <a href="./categories pages/mens-suits.html`" class="categories-1">
+                <img src="./../men/image/suit-11.webp" class="categories-card" />
+                <h class="categories-card-title"><b>Men's suits</b></h>
             </a>
         </div>
 
