--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <!--categories add-->
     <div class="categories-container">
         <div class="categories">
-            <a href="./categories pages/mens-suits.html`" class="categories-1">
+            <a href="./categories pages/mens-suits.html" class="categories-1">
                 <img src="./../men/image/suit-11.webp" class="categories-card" />
                 <h class="categories-card-title"><b>Men's suits</b></h>
             </a>
