--- a/categories pages/mens-suits.html
+++ b/categories pages/mens-suits.html
@@ -704,7 +704,7 @@
                     </div>
                     <!---------------------------------------------------------------------------------------------------------->
 
-                     <button class="footer-button">View More >></button>
+                     <button class="footer-button">View More ◑></button>
                      
                      <div class="footer">
                         <h2 class="about">CONTACT</h2><br>
