changed navbar color

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     </a>
     <a href="./pages in navbar/Notification.html">
-        <img src="./images/notification.png" />
+        <img src="./images/notification.png" class="home"/>
     </a>
         <a href="./index.html">
         <img src="./images/home.png" class="home" />
