midified kids page

--- a/categories pages/kids.html
+++ b/categories pages/kids.html
@@ -118,7 +118,7 @@
         margin-top: 10px;
         justify-content: center;
         justify-items: center;
-        box-shadow:  2px 2px 2px 2px#e67fe0;
+        box-shadow:  2px 2px 2px 2px#3c434a;
         width: 150px;
         height: 200px;
       }
