--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             </a>
     
             <a href="./pages in navbar/signin.html" class="categories-1">
-                <button class="sign-in">Sign In</button>
+                <button class="sign-in">Log In</button>
             </a>
             <a href="./pages/user.html">
                 <img src="./images/user.png" class="profile" />
