--- a/pages in navbar/signin.html
+++ b/pages in navbar/signin.html
@@ -68,8 +68,8 @@ button {
         <div class="container"> 
             <img src="../images/user2.png" class="profile">
             <center> <h1>  Log in  </h1> </center> 
-            <label>Username : </label> 
-            <input type="text"  class="log" placeholder="Enter Username" name="username" >
+            <label>Email-id : </label> 
+            <input type="text"  class="log" placeholder="Enter your email-id" name="username" >
             <label>Password : </label> 
             <input type="password" class="log" placeholder="Enter Password" name="password">
             <a href="../index.html">
