--- a/pages in navbar/signup.html
+++ b/pages in navbar/signup.html
@@ -66,13 +66,15 @@ a {
 <body>
 <h1>Sign Up</h1>
 <form>
+<label for="name"><b>Name</b></label>
+<input type="text" placeholder="Enter your name" name="name" >
 <label for="email"><b>Email</b></label>
-<input type="text" placeholder="Enter email or phone...." name="email" >
+<input type="text" placeholder="Enter email" name="email" >
 <label for="psw"><b>Password</b></label>
 <input type="password" placeholder="Enter Password" name="psw">
-<label for="psw-repeat"><b>Repeat Password</b></label>
+<label for="psw-repeat"><b>Conform your Password</b></label>
 <input type="password"  placeholder="Repeat Password" name="psw-repeat">
-<label for="psw-repeat"><b>Phone no</b></label>
+<label for="psw-repeat"><b>Contact Number</b></label>
 <input type="text"  placeholder="Phone no" name="phone" >
 <hr>
 <p>By creating an account you agree to our <a href="#">Terms & Privacy</a>.</p>
@@ -81,7 +83,7 @@ a {
 </div></a>
 <div class="signin">
 <p>Already have an account? 
-    <a href="./signin.html">Sign in</a></p>
+    <a href="./signin.html">Log in</a></p>
 </div>
 </form>
 </body>
