--- a/accessories/boy.html
+++ b/accessories/boy.html
@@ -356,7 +356,7 @@ margin-top: 7px;
 
         <div>
              <img src="../categories pages/accessories-img/boy-9.png" class="categories-card" />
-                <h class="categories-card-title-1">Cap for Men Women Topi Unisex<br>                         ₹ 800/- only </h><br>
+                <h class="categories-card-title-1"> <br> ₹ 800/- only </h><br>
                 <a href="../categories pages/bagreference.html"><button class="buy-btn">Buy Now</button></a>
                 <button class="View-btn">Add to Cart</button>
         </div>
