menu image added

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     </a>
     <a href="./pages in navbar/Notification.html">
-        <img src="./images/notification.png" class="home"/>
+        <img src="./images/notification.png" class="not"/>
     </a>
 
         <a href="./pages in navbar/addtocart.html">
@@ -41,6 +41,7 @@
             <a href="./pages/user.html">
                 <img src="./images/user.png" class="profile" />
             </a>
+         
     </div>
 
     
