--- a/categories pages/footwere.html
+++ b/categories pages/footwere.html
@@ -259,14 +259,14 @@
       <img src="../images/sandal.jpg" class="categories-card" />
       <h class="categories-card-title-1">&nbsp &nbspWomen Trendy Sandal<br> &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp
         &nbsp Ru 800/- only </h><br>
-      <a href="../categories pages/bagreference.html"><button class="buy-btn">Buy Now</button></a>
+        <a href="./back-end-buy.html"><button class="buy-btn">Buy Now</button></a>
       <button class="View-btn">Add to Cart</button>
     </div>
     <div>
       <img src="../images/bellies.webp" class="categories-card" />
       <h class="categories-card-title-1">&nbsp &nbsp &nbsp Women Trendy Sandal<br>&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp
         &nbsp Ru 1200/- only </h><br>
-      <a href="../categories pages/bagreference.html"><button class="buy-btn">Buy Now</button></a>
+        <a href="./back-end-buy.html"><button class="buy-btn">Buy Now</button></a>
       <button class="View-btn">Add to Cart</button>
     </div>
     <div>
