added home page path in accessories page

--- a/categories pages/acessories.html
+++ b/categories pages/acessories.html
@@ -280,7 +280,7 @@
         <a href="../pages in navbar/profile.html">
             <img src="../images/user.png">
 
-            <a href="../pages in navbar/home.html">
+            <a href="../index.html">
                 <img src="../images/home.png" class="home" />
             </a>
             <form id="form">
