navbar added in womwn wear

--- a/Womens_Ethenic/womens.html
+++ b/Womens_Ethenic/womens.html
@@ -342,45 +342,46 @@
       text-decoration: none !important;
       color: white;
     }
+    .hea{
+      background-color: rgb(165, 202, 226);
+      text-align: center;
+      margin-top: 20px;
+      border-radius: 15px;
+    }
   </style>
 </head>
 
 
 
 <body>
-</div>
-<div class="navbar">
 
-  <a href="./pages/user.html">
-    <img src="./images/user.png" class="profile" />
-  </a>
+  <div class="navbar">
 
-  <a href="../index.html">
-    <img src="./images/home.png" class="home" />
-  </a>
-  <form id="form">
-    <input type="search" id="query" name="q" placeholder="Search here ...." class="search-bar">
-    <button class="search-button">Search</button>
-  </form>
+    <a href="../pages in navbar/profile.html">
+      <img src="../images/user.png">
 
-  <a href="./pages/Notification.html">
-    <img src="./images/notification.png" class="home" />
+      <a href="../index.html">
+        <img src="../images/home.png" class="home" />
+      </a>
+      <form id="form">
+        <input type="search" id="query" name="q" placeholder="Search here ...." class="search-bar">
+        <button class="search-button">Search</button>
+    </a>
+    </form>
 
-  </a>
-
-  <a href="./pages in navbar/addtocart.html">
-    <img src="./images/add-to-cart.png" class="add-to-cart" /></a>
-
-  <a href="./pages in navbar/return.html" class="categories-1">
-    <h3 class="return-order">Return Order</h3>
-  </a>
-</div>
+    <a href="../pages/Notification.html">
+      <img src="../images/notification.png" class="home" />
 
 
 
-<header>
-  <h1>Womens Ethenic Wear</h1>
-</header>
+      <a href="../pages in navbar/addtocart.html">
+        <img src="../images/add-to-cart.png" class="add-to-cart" /></a>
+
+      <a href="../pages in navbar/return.html" class="categories-1">
+        <h3 class="return-order">Return Order</h3>
+      </a>
+  </div>
+<h1 class="hea">Womens Ethenic Wear</h1>
 
 <div class="container">
 
