--- a/categories pages/footwere.html
+++ b/categories pages/footwere.html
@@ -259,14 +259,14 @@
       <img src="../images/sandal.jpg" class="categories-card" />
       <h class="categories-card-title-1">&nbsp &nbspWomen Trendy Sandal<br> &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp
         &nbsp Ru 800/- only </h><br>
-        <a href="./back-end-buy.html"><button class="buy-btn">Buy Now</button></a>
+      <a href="./back-end-buy.html"><button class="buy-btn">Buy Now</button></a>
       <button class="View-btn">Add to Cart</button>
     </div>
     <div>
       <img src="../images/bellies.webp" class="categories-card" />
       <h class="categories-card-title-1">&nbsp &nbsp &nbsp Women Trendy Sandal<br>&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp
         &nbsp Ru 1200/- only </h><br>
-        <a href="./back-end-buy.html"><button class="buy-btn">Buy Now</button></a>
+      <a href="./back-end-buy.html"><button class="buy-btn">Buy Now</button></a>
       <button class="View-btn">Add to Cart</button>
     </div>
     <div>
@@ -350,45 +350,49 @@
       <button class="View-btn">Add to Cart</button>
     </div>
   </div><br>
-<div class="card">
+  <div class="card">
     <img src="../images/juttis.webp" alt="Kid's Wear 1">
     <div class="card-content">
-      <h2 class="card-title">juttis  </h2>
+      <h2 class="card-title">juttis </h2>
       <p class="card-price">Price rs 399/-</p>
       <div class="btn-class"> <button class="buy-button">Buy Now</button>
-        <button class="Add-to-cart">Add to cart</button></div>
-  <!--div 4-->
-  <div class="categories-container-bag">
-    <div>
-      <img src="../images/sandal.jpg" class="categories-card" />
-      <h class="categories-card-title-1">Women Trendy Sandal<br> &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp Ru
-        800/- only </h><br>
-      <a href="../categories pages/bagreference.html"><button class="buy-btn">Buy Now</button></a>
-      <button class="View-btn">Add to Cart</button>
-    </div>
-    <div>
-      <img src="../images/bellies.webp" class="categories-card" />
-      <h class="categories-card-title-1">&nbsp &nbsp &nbsp Women Trendy Sandal<br>&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp
-        &nbsp Ru 1200/- only </h><br>
-      <a href="../categories pages/bagreference.html"><button class="buy-btn">Buy Now</button></a>
-      <button class="View-btn">Add to Cart</button>
+        <button class="Add-to-cart">Add to cart</button>
+      </div>
+      <!--div 4-->
+      <div class="categories-container-bag">
+        <div>
+          <img src="../images/sandal.jpg" class="categories-card" />
+          <h class="categories-card-title-1">Women Trendy Sandal<br> &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp Ru
+            800/- only </h><br>
+          <a href="../categories pages/bagreference.html"><button class="buy-btn">Buy Now</button></a>
+          <button class="View-btn">Add to Cart</button>
+        </div>
+        <div>
+          <img src="../images/bellies.webp" class="categories-card" />
+          <h class="categories-card-title-1">&nbsp &nbsp &nbsp Women Trendy Sandal<br>&nbsp &nbsp &nbsp &nbsp &nbsp
+            &nbsp
+            &nbsp Ru 1200/- only </h><br>
+          <a href="../categories pages/bagreference.html"><button class="buy-btn">Buy Now</button></a>
+          <button class="View-btn">Add to Cart</button>
 
-    </div>
-    <div>
-      <img src="../images/footwere.jpg" class="categories-card" />
-      <h class="categories-card-title-1"> &nbsp &nbsp &nbsp Women Trendy Sandal<br> &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp
-        &nbsp Ru 1100/- Only</h><br>
-      <a href="../categories pages/bagreference.html"><button class="buy-btn">Buy Now</button></a>
-      <button class="View-btn">Add to Cart</button>
-    </div>
-    <div>
-      <img src="../images/attractivejuttis.webp" class="categories-card" />
-      <h class="categories-card-title-1"> &nbsp Women Trendy Sandal<br> &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp
-        Ru 1000/- Only</h><br>
-      <a href="../categories pages/bagreference.html"><button class="buy-btn">Buy Now</button></a>
-      <button class="View-btn">Add to Cart</button>
-    </div>
-  </div><br>
+        </div>
+        <div>
+          <img src="../images/footwere.jpg" class="categories-card" />
+          <h class="categories-card-title-1"> &nbsp &nbsp &nbsp Women Trendy Sandal<br> &nbsp &nbsp &nbsp &nbsp &nbsp
+            &nbsp
+            &nbsp Ru 1100/- Only</h><br>
+          <a href="../categories pages/bagreference.html"><button class="buy-btn">Buy Now</button></a>
+          <button class="View-btn">Add to Cart</button>
+        </div>
+        <div>
+          <img src="../images/attractivejuttis.webp" class="categories-card" />
+          <h class="categories-card-title-1"> &nbsp Women Trendy Sandal<br> &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp
+            &nbsp
+            Ru 1000/- Only</h><br>
+          <a href="../categories pages/bagreference.html"><button class="buy-btn">Buy Now</button></a>
+          <button class="View-btn">Add to Cart</button>
+        </div>
+      </div><br>
 
 
 
