--- a/categories pages/acessories.html
+++ b/categories pages/acessories.html
@@ -263,11 +263,13 @@
 
         .ft-heading:hover {
             background-color: rgb(240, 231, 115);
+
         }
 
         .ft-heading-img {
             margin-left: 250px;
             height: 300px;
+            margin-top: 20px;
 
         }
     </style>
