navbar added on winter wear

--- a/categories pages/winter.html
+++ b/categories pages/winter.html
@@ -11,7 +11,7 @@
 
     .navbar {
       background-color: rgb(21, 21, 111);
-      height: 60px;
+      height: 50px;
       align-items: center;
       padding-left: 100px;
       padding-right: 100px;
@@ -21,7 +21,7 @@
       flex-direction: row;
       justify-content: space-between;
       position: sticky;
-      margin-top: 7px;
+
     }
 
     .logo {
@@ -29,10 +29,11 @@
       display: flex;
       flex-direction: row;
       justify-content: flex-start;
+
     }
 
     .home {
-      height: 40px;
+      height: 30px;
       text-decoration: none;
       margin: 5px;
       display: flex;
@@ -52,39 +53,55 @@
       margin-right: 100%;
     }
 
-    .add-to-cart {
-      height: 45px;
-      width: 35px;
-      display: flex;
-      flex-direction: row;
-      justify-content: flex-end;
-      margin-left: 80%;
-      margin-right: 30px;
+    .sign-up {
+      height: auto;
+      text-decoration: none;
+      color: white;
+      margin-top: 35px;
+      margin-bottom: 35px;
+
     }
 
-    .return-order {
+    .sign-in {
       height: auto;
       text-decoration: none;
       color: white;
       margin-left: 90%;
+      margin-bottom: 35px;
+    }
+
+    .add-to-cart {
+      height: 40px;
+      width: 30px;
+      display: flex;
+      flex-direction: row;
+      justify-content: flex-end;
+      margin-left: 80%;
+    }
+
+    .return-order {
+      height: auto;
+      text-decoration: none !important;
+      color: white;
+      margin-left: 90%;
+
     }
 
     .search-bar {
-      width: 280px;
-      height: 40px;
+      width: 250px;
+      height: 33px;
       border-color: black;
       border-style: solid;
-      border-radius: 3px;
-    }
+      margin-top:auto;
+      margin-bottom: auto;}
 
     .search-button {
-      height: 40px;
-      width: 80px;
+      height: 33px;
+      width: 70px;
       margin-left: px;
       margin-right: 50px;
       border-color: black;
       border-style: solid;
-      border-radius: 3px;
     }
 
     body {
