heading added in winter wear

--- a/categories pages/winter.html
+++ b/categories pages/winter.html
@@ -359,6 +359,13 @@
       text-decoration: none !important;
       color: white;
     }
+    .ft-heading {
+      background-color: rgb(212, 227, 239);
+      border-radius: 15px;
+      text-align: center;
+      height: 60px;
+      margin-top: 20px;
+    }
   </style>
 </head>
 
@@ -391,11 +398,8 @@
     </a>
   </div>
 
-
-
-  <header>
-    <h1>WINTER WEAR</h1>
-  </header>
+ 
+    <h1 class="ft-heading">Winter Wear</h1>
 
   <div class="container">
 
