added images to cards

--- a/pages in navbar/About.html
+++ b/pages in navbar/About.html
@@ -144,16 +144,17 @@
 		}
 		.card .info {
 			text-align: center;
-            font-size: ;
 			margin-bottom: 100px;
 	
 		}
 		h1 {
-			color: #ef64c3;
+			color: #faf2f8;
 			font-size: 5em;
 			text-align: center;
 			text-shadow: 2px 2px 4px #000;
 			margin-top: auto;
+            font-family: serif;
+
 	
 		}
         .city{
@@ -388,12 +389,12 @@
 		</a>
 	  </div>
 	
-	<h1>OUR GUARDIANS</h1>
+	<h1>Our Guardians</h1>
 	<div class="container">
 	<div class="big-card">
 		<img src="./images/rtc.jpg" alt="rtc team image">
 	</div>
-		<h1>OUR RTC PROJECT TEAM MEMBERS</h1>
+		<h1>Our RTC Project Team Members</h1>
          <div class="card">
 			<img src="./images/harshda.jpg" alt="Member 1">
 			<div class="info">
@@ -449,7 +450,7 @@
 			</div>
 		</div>
             <div class="card">
-			<img src="member.jpg" alt="Member 7">
+			<img src="./images/aaditya.jpg" alt="Member 7">
 			<div class="info">
 				<h2>AADITYA JADHAV</h2>
                 <p class="city">SHIRDI</p>
@@ -458,16 +459,16 @@
 			</div>
 		</div>
            <div class="card">
-			<img src="./images/rohan.jpg" alt="Member 8">
+			<img src="./images/rohan1.jpg" alt="Member 8">
 			<div class="info">
 				<h2>ROHAN SHITOLE</h2>
-				<p class="city">NAGPUR</p>
+				<p class="city">AHEMDNAGAR</p>
 				<p></p>
 				<p></p>
 			</div>
 		</div>
            <div class="card">
-			<img src="member.jpg" alt="Member 9">
+			<img src="./images/rajnandini.jpg" alt="Member 9">
 			<div class="info">
 				<h2>RAJNANDINI</h2>
 				<p class="city">AHEMDNAGAR</p>
